<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3EFC7"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_header1"
        android:layout_width="350dp"
        android:layout_height="62dp"
        android:layout_marginTop="40dp"
        android:text="@string/tv_header1"
        android:textAlignment="center"
        android:textColor="#6831CA"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.606"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_fname"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:text="@string/tv_fname"
        app:layout_constraintEnd_toStartOf="@+id/et_fname"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_header1" />

    <TextView
        android:id="@+id/tv_lname"
        android:layout_width="85dp"
        android:layout_height="22dp"
        android:layout_marginTop="60dp"
        android:text="@string/tv_lname"
        android:textAlignment="viewStart"
        app:layout_constraintStart_toStartOf="@+id/tv_fname"
        app:layout_constraintTop_toBottomOf="@+id/tv_fname" />

    <EditText
        android:id="@+id/et_fname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_header1" />

    <EditText
        android:id="@+id/et_lname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/et_fname"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/et_fname"
        app:layout_constraintTop_toBottomOf="@+id/et_fname" />

    <Button
        android:id="@+id/btn_sender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginBottom="45dp"
        android:backgroundTint="#29F79F"
        android:text="@string/btn_sender"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_close_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="45dp"
        android:backgroundTint="#DF0A3C"
        android:text="@string/btn_close_app"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#40B1E9"
        android:text="@string/btn_clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_close_app"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toEndOf="@+id/btn_sender"
        app:layout_constraintTop_toTopOf="@+id/btn_sender"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_res_nickname"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginTop="52dp"
        android:text="@string/tv_nickname"
        app:layout_constraintStart_toStartOf="@+id/tv_lname"
        app:layout_constraintTop_toBottomOf="@+id/tv_lname" />

    <TextView
        android:id="@+id/tv_res_phone"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginTop="56dp"
        android:text="@string/tv_phone"
        app:layout_constraintStart_toStartOf="@+id/tv_res_nickname"
        app:layout_constraintTop_toBottomOf="@+id/tv_res_nickname" />

    <TextView
        android:id="@+id/tv_res_address"
        android:layout_width="52dp"
        android:layout_height="19dp"
        android:layout_marginTop="56dp"
        android:text="@string/tv_address"
        app:layout_constraintStart_toStartOf="@+id/tv_res_phone"
        app:layout_constraintTop_toBottomOf="@+id/tv_res_phone" />

    <EditText
        android:id="@+id/et_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/et_lname"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_lname"
        app:layout_constraintTop_toBottomOf="@+id/et_lname" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/et_nickname"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_nickname"
        app:layout_constraintTop_toBottomOf="@+id/et_nickname" />

    <EditText
        android:id="@+id/et_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/et_phone"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_phone"
        app:layout_constraintTop_toBottomOf="@+id/et_phone" />

</androidx.constraintlayout.widget.ConstraintLayout>